# mazer

./: Cargo.toml  README.md
include/: mazer.h
src/: cell.rs  direction.rs  error.rs  ffi.rs  grid.rs  lib.rs  request.rs
src/algorithms/: aldous_broder.rs  binary_tree.rs  ellers.rs  growing_tree.rs  hunt_and_kill.rs  kruskals.rs  mod.rs  prims.rs  recursive_backtracker.rs  recursive_division.rs  reverse_delete.rs  sidewinder.rs  wilsons.rs
src/behaviors/: collections.rs  display.rs  graph.rs  maze.rs  mod.rs
src/maze/: cell.rs  direction.rs  grid.rs  mod.rs  request.rs
src/maze/algorithms/: aldous_broder.rs  binary_tree.rs  hunt_and_kill.rs  mod.rs  recursive_backtracker.rs  sidewinder.rs
src/render/: delta.rs  heatmap.rs  mod.rs  sigma.rs
tests/: generate_maze.rs
