[package]
name = "mazer"
version = "0.0.1"
authors = ["Jeffrey Isabella <jeff.isabella@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Library for generating and solving mazes of various maze algorithms and grid types"
repository = "https://github.com/jmisabella/mazer"

[lib]
name = "mazer"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
